# FastAPI_curso

./: .env.py  .gitignore  README.md  auth.py  banco.db  dependencies.py  main.py  models.py  pyproject.toml  requirements.txt  routes.py  schemas.py
alembic/: env.py
alembic/versions/: 0e8e98f3209d_add_admin.py  9d860d3cb9d1_initial_migration.py  a66bc70089bf_adicionar_itens_no_pedido.py  de98ddf550e0_remover_admin.py
app/: dependencies.py  main.py  schemas.py
app/internal/: auth.py
app/routers/: routes.py
templates/: admin.html  home.html  login.html  pedidos.html
